# tikitoki

./: .env.example  .gitignore  Dockerfile  README.md  TK_cookies_user98361669062.json  main.py  pyproject.toml  requirements.txt
examples/: test_song.py
src/: config.py  loader.py  worker.py
src/tiktok_uploader/: upload.py
src/tiktokautouploader/: __init__.py  function.py
src/tiktokautouploader/Js_assets/: captcha_solver.js  login_automated.js  login_with_fingerprint.js  package-lock.json  package.json  run_captcha_solver.js
