[project]
name = "tiktokuploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "requests",
    "Pillow",
    "inference",
    "faststream[rabbit]",
    "boto3",
    "python-dotenv",
    "loguru",
]
